# snackbox

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE.md  ProjectFiles.cmake  README.md  TODO.org  default.nix
include/librgb/: CMakeLists.txt  RGBColor.h
include/snackbox/: logger.hpp  snackbar.hpp  snackbox.hpp
src/: .#snackbar.cpp  logger.cpp  snackbar.cpp  snackbox.cpp
